[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"
#build_wheel_for_editable =

#[tox]
#isolated_build = true

[tool.setuptools_scm]
write_to = "effect_form_validators/_version.py"

[tool.black]
line-length = 95
target-version = ["py39"]

[tool.isort]
profile = "black"
py_version = "39"
skip = [".tox", ".eggs"]

[tool.coverage.run]
parallel = true
branch = true
source = ["effect_form_validators"]

[tool.coverage.paths]
source = ["effect_form_validators"]

[tool.coverage.report]
show_missing = true
skip_covered = true
omit = ["requirements.txt"]

