[flake8]
ignore = E226,E302,E41,W503,F601,E203,F401
max-line-length = 95
max-complexity = 10
exclude = effect_form_validators/migrations/*

;[metadata]
;name = effect-form-validators
;version = file: VERSION
;author = Erik van Widenfelt
;author_email = ew2789@gmail.com
;url = https://github.com/clinicedc/effect-form-validators
;license = GPL license, see LICENSE
;description = Classes for effect model forms validation
;long_description = file: README.rst
;long_description_content_type = text/x-rst
;keywords = django, edc, vitals
;classifiers=
;    Environment :: Web Environment
;    Framework :: Django
;    Intended Audience :: Developers
;    Intended Audience :: Science/Research
;    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
;    Operating System :: OS Independent
;    Programming Language :: Python :: 3.9
;    Topic :: Internet :: WWW/HTTP
;    Topic :: Internet :: WWW/HTTP :: Dynamic Content
;
;
;
;[options]
;python_requires = >=3.9
;zip_safe = False
;include_package_data = True
;packages = find:
;install_requires =
;
;[options.packages.find]
;exclude =
;    examples*
;    tools*
;    docs*
;    my_package.tests*
