[metadata]
name = effect-form-validators
;version = file: _version
version = attr: effect_form_validators._version._version
author = Erik van Widenfelt
author_email = ew2789@gmail.com
url = https://github.com/clinicedc/effect-form-validators
license = GPL license, see LICENSE
description = Classes for effect model forms validation
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = django, edc, vitals, clinicedc, clinical trials
classifiers=
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License version 3 (GPL-3.0)
    Topic :: Scientific/Engineering :: Medical Science Apps


[options]
python_requires = >=3.9
zip_safe = False
include_package_data = True
packages = find:
install_requires =

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    bin*
    effect_form_validators.tests*

[flake8]
ignore = E226,E302,E41,W503,F601,E203,F401
max-line-length = 95
max-complexity = 10
exclude = effect_form_validators/migrations/*

;[options.entry_points]
;setuptools_scm.version_scheme =
;    guess-next-dev = setuptools_scm.version:guess_next_dev_version
;    post-release = setuptools_scm.version:postrelease_version
;    python-simplified-semver = setuptools_scm.version:simplified_semver_version
;    release-branch-semver = setuptools_scm.version:release_branch_semver_version
;    no-guess-dev = setuptools_scm.version:no_guess_dev_version
;    calver-by-date = setuptools_scm.version:calver_by_date
